creating service attribute lines
