# api/openapi.yaml
@@ -303,7 +303,55 @@ paths:
       responses:
         "204":
           description: Updated
-  /services/{serviceId}/attributes/{attributeId}/values:
+  /services/{serviceId}/attribute_lines/{attributeId}:
+    delete:
+      operationId: deleteServiceAttributeLine
+      parameters:
+      - explode: false
+        in: path
+        name: serviceId
+        required: true
+        schema:
+          title: ServiceId
+          type: string
+        style: simple
+      - explode: false
+        in: path
+        name: attributeId
+        required: true
+        schema:
+          title: lineId
+          type: string
+        style: simple
+      responses:
+        "204":
+          description: Deleted
+      summary: Delete a service attribute line.
+    post:
+      operationId: createServiceAttributeLine
+      parameters:
+      - explode: false
+        in: path
+        name: serviceId
+        required: true
+        schema:
+          title: ServiceId
+          type: string
+        style: simple
+      - explode: false
+        in: path
+        name: attributeId
+        required: true
+        schema:
+          title: lineId
+          type: string
+        style: simple
+      responses:
+        "201":
+          description: Created
+      summary: Create an attribute line for a service. This is how we relate attribute
+        values to services.
+  /services/{serviceId}/attribute_lines/{attributeId}/values:
     description: This endpoint supports CRD on the allowed values for a service. Think
       1 day or 2 day or 3 day for filing speed attribute on Ammended and Restated
       articles.
@@ -374,9 +422,7 @@ paths:
         "201":
           description: Created
       summary: create a new service attribute value (not an attribute value.) This
-        only applies to the service listed in the path. This will automatically create
-        a Service attribute line if none exists, that's why we need the attribute
-        Id.
+        only applies to the service listed in the path.
   /services/{serviceId}/attributes/{attributeId}/values/{valueId}:
     delete:
       operationId: deleteServiceAttributeValue
